Asn1RfcExtractor can now use errata to replace broken lines. It uses URI instead of URL.